# PCLIB

./: CMakeLists.txt
include/: notes.md  pcnn.hpp  scratch.py  simple.hpp  utils.hpp
src/: binding.cpp  interface.cpp  test.cpp
testlib/: scratch2.py  test1.py
